# scripts

./: .gitignore  .pre-commit-config.yaml  README.md  extract_eml.py  get-openrouter-creds.py  get-yt-views.sh  justfile  parse_yt_links.py  pyproject.toml  test.md
audio-bible-tagger/: README.md  books.csv  rename_tracks.py
docker-utils/: ecr.py  ecr.sh  get-container-tags.py  get-ecr-tags.py  get_container_tags.py  test.py
github-utils/: .env.sample  README.md  export_gh_comments.py
parse-yt-links/: README.md  parse-yt-links.py  parse_yt_links.py  test.md
satisfactory-sync/: .env_sample  .gitignore  README.md  api.py  config.py  main.py  storage.py  sync.py
satisfactory-sync/src/: api.py  config.py  storage.py  sync.py
sqlite-utils/: README.md  sync-llm-logs.fish  sync_ff_exceptions.py
vikunja-export/: README.md  config.py  main.py  sample.env  vikunja.py  webdav.py
vikunja-export/src/: config.py  export.py  vikunja.py  webdav.py
