[project]
name = 'scripts'
version = '0.1.0'
authors = [{ name = 'Jordan Cook' }]
license = 'MIT'
readme = 'README.md'
requires-python = '>=3.12'
dependencies = [
    'attrs',
    'environ-config',
    'html2text',
    'minio',
    'mutagen',
    'python-dateutil',
    'python-dotenv',
    'rich',
    'requests',
    'requests-cache',
]

[dependency-groups]
dev = [
    'ipdb',
    'ipython',
    'pandas',
    'pillow',
    'platformdirs',
    'pyarrow',
    'pytest',
    'pyyaml',
    'ujson',
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 100
output-format = 'grouped'
target-version = 'py312'

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['B', 'C4', 'C90', 'E', 'F', 'I']
ignore = ['B023']

[tool.ruff.lint.pycodestyle]
max-line-length = 120
